hphp/hack/test/typecheck/shape/shape_field_check/key_exists_unset_key_open_shape.php.exp
File "key_exists_unset_key_open_shape.php", line 7, characters 10-35:
This Shapes::keyExists() check is always false (Typing[4250])
File "key_exists_unset_key_open_shape.php", line 6, characters 3-34:
The field 'x' was unset here
